--- a/preview/css-style-guide.html
+++ b/preview/css-style-guide.html
@@ -1,7 +1,7 @@
 <html>
   <head>
 	  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>i5ting_ztree_toc:css-style-guide</title>
+    <title>iscs_frontEnd:css-style-guide</title>
 		<link href="toc/style/github-bf51422f4bb36427d391e4b75a1daa083c2d840e.css" media="all" rel="stylesheet" type="text/css"/>
 		<link href="toc/style/github2-d731afd4f624c99a4b19ad69f3083cd6d02b81d5.css" media="all" rel="stylesheet" type="text/css"/>
 		<link href="toc/css/zTreeStyle/zTreeStyle.css" media="all" rel="stylesheet" type="text/css"/>
@@ -65,16 +65,16 @@
 				</div>
         <div id='readme' style='width:70%;margin-left:20%;'>
           	<article class='markdown-body'>
-            	<h1 id="css-">CSS编码规范</h1>
-<h2 id="1-">1 前言</h2>
+            	<p><strong>CSS编码规范</strong></p>
+<h1 id="-">前言</h1>
 <p>CSS 作为网页样式的描述语言，在百度一直有着广泛的应用。本文档的目标是使 CSS 代码风格保持一致，容易被理解和被维护。</p>
 <p>虽然本文档是针对 CSS 设计的，但是在使用各种 CSS 的预编译器(如 less、sass、stylus 等)时，适用的部分也应尽量遵循本文档的约定。</p>
-<h2 id="2-">2 代码风格</h2>
-<h3 id="2-1-">2.1 文件</h3>
+<h1 id="-">代码风格</h1>
+<h2 id="-">文件</h2>
 <p>[建议] <code>CSS</code> 文件使用无 <code>BOM</code> 的 <code>UTF-8</code> 编码。</p>
 <p>解释：</p>
 <p>UTF-8 编码具有更广泛的适应性。BOM 在使用程序或工具处理文件时可能造成不必要的干扰。</p>
-<h3 id="2-2-">2.2 缩进</h3>
+<h2 id="-">缩进</h2>
 <p>[强制] 使用 <code>4</code> 个空格做为一个缩进层级，不允许使用 <code>2</code> 个空格 或 <code>tab</code> 字符。</p>
 <p>示例：</p>
 <pre><code class="lang-css">.selector {
@@ -82,7 +82,7 @@
     padding: 0;
 }
 </code></pre>
-<h3 id="2-3-">2.3 空格</h3>
+<h2 id="-">空格</h2>
 <p>[强制] <code>选择器</code> 与 <code>{</code> 之间必须包含空格。</p>
 <p>示例：</p>
 <pre><code class="lang-css">.selector {
@@ -96,7 +96,7 @@
 <p>示例：</p>
 <pre><code class="lang-css">font-family: Arial, sans-serif;
 </code></pre>
-<h3 id="2-4-">2.4 行长度</h3>
+<h2 id="-">行长度</h2>
 <p>[强制] 每行不得超过 <code>120</code> 个字符，除非单行不可分割。</p>
 <p>解释：</p>
 <p>常见不可分割的场景为URL超长。</p>
@@ -121,7 +121,7 @@ background-image: -webkit-gradient(
     color-stop(0.52, rgb(115,123,162))
 );
 </code></pre>
-<h3 id="2-5-">2.5 选择器</h3>
+<h2 id="-">选择器</h2>
 <p>[强制] 当一个 rule 包含多个 selector 时，每个选择器声明必须独占一行。</p>
 <p>示例：</p>
 <pre><code class="lang-css">/* good */
@@ -178,7 +178,7 @@ article[character=&#39;juliet&#39;] {
     voice-family: &quot;Vivien Leigh&quot;, victoria, female;
 }
 </code></pre>
-<h3 id="2-6-">2.6 属性</h3>
+<h2 id="-">属性</h2>
 <p>[强制] 属性定义必须另起一行。</p>
 <p>示例：</p>
 <pre><code class="lang-css">/* good */
@@ -202,8 +202,8 @@ article[character=&#39;juliet&#39;] {
     margin: 0
 }
 </code></pre>
-<h2 id="3-">3 通用</h2>
-<h3 id="3-1-">3.1 选择器</h3>
+<h1 id="-">通用</h1>
+<h2 id="-">选择器</h2>
 <p>[强制] 如无必要，不得为 <code>id</code>、<code>class</code> 选择器添加类型选择器进行限定。</p>
 <p>解释：</p>
 <p>在性能和维护性上，都有一定的影响。</p>
@@ -230,7 +230,7 @@ p.danger-message {
 .page .header .login #username input {}
 .comment div * {}
 </code></pre>
-<h3 id="3-2-">3.2 属性缩写</h3>
+<h2 id="-">属性缩写</h2>
 <p>[建议] 在可以使用缩写的情况下，尽量使用属性缩写。</p>
 <p>示例：</p>
 <pre><code class="lang-css">/* good */
@@ -274,7 +274,7 @@ article {
     border: 1px solid #69c; /* introducing redundancy */
 }
 </code></pre>
-<h3 id="3-3-">3.3 属性书写顺序</h3>
+<h2 id="-">属性书写顺序</h2>
 <p>[建议] 同一 rule set 下的属性在书写时，应按功能进行分组，并以 <strong>Formatting Model（布局方式、位置） &gt; Box Model（尺寸） &gt; Typographic（文本相关） &gt; Visual（视觉效果）</strong> 的顺序书写，以提高代码的可读性。</p>
 <p>解释：</p>
 <ul>
@@ -309,7 +309,7 @@ article {
             transition: color 1s;
 }
 </code></pre>
-<h3 id="3-4-">3.4 清除浮动</h3>
+<h2 id="-">清除浮动</h2>
 <p>[建议] 当元素需要撑起高度以包含内部的浮动元素时，通过对伪类设置 <code>clear</code> 或触发 <code>BFC</code> 的方式进行 <code>clearfix</code>。尽量不使用增加空标签的方式。</p>
 <p>解释：</p>
 <p>触发 BFC 的方式很多，常见的有：</p>
@@ -320,12 +320,12 @@ article {
 </ul>
 <p>如希望使用更小副作用的清除浮动方法，参见 <a href="http://nicolasgallagher.com/micro-clearfix-hack/">A new micro clearfix hack</a> 一文。</p>
 <p>另需注意，对已经触发 BFC 的元素不需要再进行 clearfix。</p>
-<h3 id="3-5-important">3.5 !important</h3>
+<h2 id="-important">!important</h2>
 <p>[建议] 尽量不使用 <code>!important</code> 声明。</p>
 <p>[建议] 当需要强制指定样式且不允许任何场景覆盖时，通过标签内联和 <code>!important</code> 定义样式。</p>
 <p>解释：</p>
 <p>必须注意的是，仅在设计上 <code>确实不允许任何其它场景覆盖样式</code> 时，才使用内联的 <code>!important</code> 样式。通常在第三方环境的应用中使用这种方案。下面的 <code>z-index</code> 章节是其中一个特殊场景的典型样例。</p>
-<h3 id="3-6-z-index">3.6 z-index</h3>
+<h2 id="z-index">z-index</h2>
 <p>[建议] 将 <code>z-index</code> 进行分层，对文档流外绝对定位元素的视觉层级关系进行管理。</p>
 <p>解释：</p>
 <p>同层的多个元素，如多个由用户输入触发的 Dialog，在该层级内使用相同的 <code>z-index</code> 或递增 <code>z-index</code>。</p>
@@ -337,8 +337,8 @@ article {
 <p>[建议] 在第三方环境下，期望显示在最上层的元素，通过标签内联和 <code>!important</code>，将 <code>z-index</code> 指定为 <code>2147483647</code>。</p>
 <p>解释：</p>
 <p>第三方环境对于开发者来说完全不可控。在第三方环境下的元素，为了保证元素不被其页面其他样式定义覆盖，需要采用此做法。</p>
-<h2 id="4-">4 值与单位</h2>
-<h3 id="4-1-">4.1 文本</h3>
+<h1 id="-">值与单位</h1>
+<h2 id="-">文本</h2>
 <p>[强制] 文本内容必须用双引号包围。</p>
 <p>解释：</p>
 <p>文本类型的内容可能在选择器、属性值等内容中。</p>
@@ -365,7 +365,7 @@ html[lang|=zh] q:after {
     content: &quot;”&quot;;
 }
 </code></pre>
-<h3 id="4-2-">4.2 数值</h3>
+<h2 id="-">数值</h2>
 <p>[强制] 当数值为 0 - 1 之间的小数时，省略整数部分的 <code>0</code>。</p>
 <p>示例：</p>
 <pre><code class="lang-css">/* good */
@@ -378,7 +378,7 @@ panel {
     opacity: 0.8;
 }
 </code></pre>
-<h3 id="4-3-url-">4.3 url()</h3>
+<h2 id="url-">url()</h2>
 <p>[强制] <code>url()</code> 函数中的路径不加引号。</p>
 <p>示例：</p>
 <pre><code class="lang-css">body {
@@ -391,7 +391,7 @@ panel {
     background: url(//baidu.com/img/bg.png) no-repeat 0 0;
 }
 </code></pre>
-<h3 id="4-4-">4.4 长度</h3>
+<h2 id="-">长度</h2>
 <p>[强制] 长度为 <code>0</code> 时须省略单位。 (也只有长度单位可省)</p>
 <p>示例：</p>
 <pre><code class="lang-css">/* good */
@@ -404,7 +404,7 @@ body {
     padding: 0px 5px;
 }
 </code></pre>
-<h3 id="4-5-">4.5 颜色</h3>
+<h2 id="-">颜色</h2>
 <p>[强制] RGB颜色值必须使用十六进制记号形式 <code>#rrggbb</code>。不允许使用 <code>rgb()</code>。 </p>
 <p>解释：</p>
 <p>带有alpha的颜色信息可以使用 <code>rgba()</code>。使用 <code>rgba()</code> 时每个逗号后必须保留一个空格。</p>
@@ -465,7 +465,7 @@ body {
     color: #90ee90;
 }
 </code></pre>
-<h3 id="4-6-2d-">4.6 2D 位置</h3>
+<h2 id="2d-">2D 位置</h2>
 <p>[强制] 必须同时给出水平和垂直方向的位置。</p>
 <p>解释：</p>
 <p>2D 位置初始值为 <code>0% 0%</code>，但在只有一个方向的值时，另一个方向的值会被解析为 center。为避免理解上的困扰，应同时给出两个方向的值。<a href="http://www.w3.org/TR/CSS21/colors.html#propdef-background-position">background-position属性值的定义</a></p>
@@ -480,8 +480,8 @@ body {
     background-position: top; /* 50% 0% */
 }
 </code></pre>
-<h2 id="5-">5 文本编排</h2>
-<h3 id="5-1-">5.1 字体族</h3>
+<h1 id="-">文本编排</h1>
+<h2 id="-">字体族</h2>
 <p>[强制] <code>font-family</code> 属性中的字体族名称应使用字体的英文 <code>Family Name</code>，其中如有空格，须放置在引号中。</p>
 <p>解释：</p>
 <p>所谓英文 Family Name，为字体文件的一个元数据，常见名称如下：</p>
@@ -575,15 +575,15 @@ h1 {
     font-family: Arial, &quot;Microsoft YaHei&quot;, sans-serif;
 }
 </code></pre>
-<h3 id="5-2-">5.2 字号</h3>
+<h2 id="-">字号</h2>
 <p>[强制] 需要在 Windows 平台显示的中文内容，其字号应不小于 <code>12px</code>。</p>
 <p>解释：</p>
 <p>由于 Windows 的字体渲染机制，小于 <code>12px</code> 的文字显示效果极差、难以辨认。</p>
-<h3 id="5-3-">5.3 字体风格</h3>
+<h2 id="-">字体风格</h2>
 <p>[建议] 需要在 Windows 平台显示的中文内容，不要使用除 <code>normal</code> 外的 <code>font-style</code>。其他平台也应慎用。</p>
 <p>解释：</p>
 <p>由于中文字体没有 <code>italic</code> 风格的实现，所有浏览器下都会 fallback 到 <code>obilique</code> 实现 (自动拟合为斜体)，小字号下 (特别是 Windows 下会在小字号下使用点阵字体的情况下) 显示效果差，造成阅读困难。</p>
-<h3 id="5-4-">5.4 字重</h3>
+<h2 id="-">字重</h2>
 <p>[强制] <code>font-weight</code> 属性必须使用数值方式描述。</p>
 <p>解释：</p>
 <p>CSS 的字重分 100 – 900 共九档，但目前受字体本身质量和浏览器的限制，实际上支持 <code>400</code> 和 <code>700</code> 两档，分别等价于关键词 <code>normal</code> 和 <code>bold</code>。</p>
@@ -600,7 +600,7 @@ h1 {
     font-weight: bold;
 }
 </code></pre>
-<h3 id="5-5-">5.5 行高</h3>
+<h2 id="-">行高</h2>
 <p>[建议] <code>line-height</code> 在定义文本段落时，应使用数值。</p>
 <p>解释：</p>
 <p>将 <code>line-height</code> 设置为数值，浏览器会基于当前元素设置的 <code>font-size</code> 进行再次计算。在不同字号的文本段落组合中，能达到较为舒适的行间间隔效果，避免在每个设置了 <code>font-size</code> 都需要设置 <code>line-height</code>。</p>
@@ -610,7 +610,7 @@ h1 {
     line-height: 1.5;
 }
 </code></pre>
-<h2 id="6-">6 变换与动画</h2>
+<h1 id="-">变换与动画</h1>
 <p>[强制] 使用 <code>transition</code> 时应指定 <code>transition-property</code>。</p>
 <p>示例：</p>
 <pre><code class="lang-css">/* good */
@@ -651,7 +651,7 @@ h1 {
     left: 20px; /* move right for 20px */
 }
 </code></pre>
-<h2 id="7-">7 响应式</h2>
+<h1 id="-">响应式</h1>
 <p>[强制] <code>Media Query</code> 不得单独编排，必须与相关的规则一起定义。</p>
 <p>示例：</p>
 <pre><code class="lang-css">/* Good */
@@ -693,8 +693,8 @@ h1 {
 }
 </code></pre>
 <p>[建议] 尽可能给出在高分辨率设备 (Retina) 下效果更佳的样式。</p>
-<h2 id="8-">8 兼容性</h2>
-<h3 id="8-1-">8.1 属性前缀</h3>
+<h1 id="-">兼容性</h1>
+<h2 id="-">属性前缀</h2>
 <p>[强制] 带私有前缀的属性由长到短排列，按冒号位置对齐。</p>
 <p>解释：</p>
 <p>标准属性放在最后，按冒号对齐方便阅读，也便于在编辑器内进行多行编辑。</p>
@@ -705,7 +705,7 @@ h1 {
             box-sizing: border-box;
 }
 </code></pre>
-<h3 id="8-2-hack">8.2 Hack</h3>
+<h2 id="hack">Hack</h2>
 <p>[建议] 需要添加 <code>hack</code> 时应尽可能考虑是否可以采用其他方式解决。</p>
 <p>解释：</p>
 <p>如果能通过合理的 HTML 结构或使用其他的 CSS 定义达到理想的样式，则不应该使用 hack 手段解决问题。通常 hack 会导致维护成本的增加。</p>
@@ -738,7 +738,7 @@ h1 {
     *zoom: 1; /* triggering hasLayout */
 }
 </code></pre>
-<h3 id="8-3-expression">8.3 Expression</h3>
+<h2 id="expression">Expression</h2>
 <p>[强制] 禁止使用 <code>Expression</code>。</p>
 
           	</article>
