--- a/preview/html-style-guide.html
+++ b/preview/html-style-guide.html
@@ -1,7 +1,7 @@
 <html>
   <head>
 	  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>iscs_FrontEnd:html-style-guide</title>
+    <title>iscs_frontEnd:html-style-guide</title>
 		<link href="toc/style/github-bf51422f4bb36427d391e4b75a1daa083c2d840e.css" media="all" rel="stylesheet" type="text/css"/>
 		<link href="toc/style/github2-d731afd4f624c99a4b19ad69f3083cd6d02b81d5.css" media="all" rel="stylesheet" type="text/css"/>
 		<link href="toc/css/zTreeStyle/zTreeStyle.css" media="all" rel="stylesheet" type="text/css"/>
@@ -65,11 +65,11 @@
 				</div>
         <div id='readme' style='width:70%;margin-left:20%;'>
           	<article class='markdown-body'>
-            	<h1 id="html-">HTML编码规范</h1>
-<h2 id="1-">1 前言</h2>
+            	<p><strong>HTML编码规范</strong></p>
+<h1 id="-">前言</h1>
 <p>HTML 作为描述网页结构的超文本标记语言，在百度一直有着广泛的应用。本文档的目标是使 HTML 代码风格保持一致，容易被理解和被维护。</p>
-<h2 id="2-">2 代码风格</h2>
-<h3 id="2-1-">2.1 缩进与换行</h3>
+<h1 id="-">代码风格</h1>
+<h2 id="-">缩进与换行</h2>
 <p>[强制] 使用 <code>4</code> 个空格做为一个缩进层级，不允许使用 <code>2</code> 个空格 或 <code>tab</code> 字符。</p>
 <p>示例：</p>
 <pre><code class="lang-html">&lt;ul&gt;
@@ -80,7 +80,7 @@
 <p>[建议] 每行不得超过 <code>120</code> 个字符。</p>
 <p>解释：</p>
 <p>过长的代码不容易阅读与维护。但是考虑到 HTML 的特殊性，不做硬性要求。</p>
-<h3 id="2-2-">2.2 命名</h3>
+<h2 id="-">命名</h2>
 <p>[强制] <code>class</code> 必须单词全字母小写，单词间以 <code>-</code> 分隔。</p>
 <p>[强制] <code>class</code> 必须代表相应模块或部件的内容或功能，不得以样式信息进行命名。</p>
 <p>示例：</p>
@@ -128,7 +128,7 @@ alert(document.getElementById(&#39;foo&#39;).tagName);
 &lt;/script&gt;
 `
 </code></pre>
-<h3 id="2-3-">2.3 标签</h3>
+<h2 id="-">标签</h2>
 <p>[强制] 标签名必须使用小写字母。</p>
 <p>示例：</p>
 <pre><code class="lang-html">&lt;!-- good --&gt;
@@ -205,7 +205,7 @@ alert(document.getElementById(&#39;foo&#39;).tagName);
     &lt;img src=&quot;image.png&quot;&gt;
 &lt;/span&gt;
 </code></pre>
-<h3 id="2-4-">2.4 属性</h3>
+<h2 id="-">属性</h2>
 <p>[强制] 属性名必须使用小写字母。</p>
 <p>示例：</p>
 <pre><code class="lang-html">&lt;!-- good --&gt;
@@ -236,8 +236,8 @@ alert(document.getElementById(&#39;foo&#39;).tagName);
 <p>示例：</p>
 <pre><code class="lang-html">&lt;ol data-ui-type=&quot;Select&quot;&gt;&lt;/ol&gt;
 </code></pre>
-<h2 id="3-">3 通用</h2>
-<h3 id="3-1-doctype">3.1 DOCTYPE</h3>
+<h1 id="-">通用</h1>
+<h2 id="doctype">DOCTYPE</h2>
 <p>[强制] 使用 <code>HTML5</code> 的 <code>doctype</code> 来启用标准模式，建议使用大写的 <code>DOCTYPE</code>。</p>
 <p>示例：</p>
 <pre><code class="lang-html">&lt;!DOCTYPE html&gt;
@@ -252,7 +252,7 @@ alert(document.getElementById(&#39;foo&#39;).tagName);
 <p>示例：</p>
 <pre><code class="lang-html">&lt;html lang=&quot;zh-CN&quot;&gt;
 </code></pre>
-<h3 id="3-2-">3.2 编码</h3>
+<h2 id="-">编码</h2>
 <p>[强制] 页面必须使用精简形式，明确指定字符编码。指定字符编码的 <code>meta</code> 必须是 <code>head</code> 的第一个直接子元素。</p>
 <p>解释：</p>
 <p>见 <a href="http://www.qianduan.net/html5-charset-can-it.html">HTML5 Charset能用吗</a> 一文。</p>
@@ -270,7 +270,7 @@ alert(document.getElementById(&#39;foo&#39;).tagName);
 <p>[建议] <code>HTML</code> 文件使用无 <code>BOM</code> 的 <code>UTF-8</code> 编码。</p>
 <p>解释：</p>
 <p><code>UTF-8</code> 编码具有更广泛的适应性。<code>BOM</code> 在使用程序或工具处理文件时可能造成不必要的干扰。</p>
-<h3 id="3-3-css-javascript-">3.3 CSS 和 JavaScript 引入</h3>
+<h2 id="css-javascript-">CSS 和 JavaScript 引入</h2>
 <p>[强制] 引入 <code>CSS</code> 时必须指明 <code>rel=&quot;stylesheet&quot;</code>。</p>
 <p>示例：</p>
 <pre><code class="lang-html">&lt;link rel=&quot;stylesheet&quot; href=&quot;page.css&quot;&gt;
@@ -299,8 +299,8 @@ alert(document.getElementById(&#39;foo&#39;).tagName);
 <p>示例：</p>
 <pre><code class="lang-html">&lt;script src=&quot;//s1.bdstatic.com/cache/static/jquery-1.10.2.min_f2fb5194.js&quot;&gt;&lt;/script&gt;
 </code></pre>
-<h2 id="4-head">4 head</h2>
-<h3 id="4-1-title">4.1 title</h3>
+<h1 id="head">head</h1>
+<h2 id="title">title</h2>
 <p>[强制] 页面必须包含 <code>title</code> 标签声明标题。</p>
 <p>[强制] <code>title</code> 必须作为 <code>head</code> 的直接子元素，并紧随 <code>charset</code> 声明之后。</p>
 <p>解释：</p>
@@ -311,7 +311,7 @@ alert(document.getElementById(&#39;foo&#39;).tagName);
     &lt;title&gt;页面标题&lt;/title&gt;
 &lt;/head&gt;
 </code></pre>
-<h3 id="4-2-favicon">4.2 favicon</h3>
+<h2 id="favicon">favicon</h2>
 <p>[强制] 保证 <code>favicon</code> 可访问。</p>
 <p>解释：</p>
 <p>在未指定 favicon 时，大多数浏览器会请求 Web Server 根目录下的 <code>favicon.ico</code> 。为了保证 favicon 可访问，避免 404，必须遵循以下两种方法之一：</p>
@@ -322,13 +322,13 @@ alert(document.getElementById(&#39;foo&#39;).tagName);
 <p>示例：</p>
 <pre><code class="lang-html">&lt;link rel=&quot;shortcut icon&quot; href=&quot;path/to/favicon.ico&quot;&gt;
 </code></pre>
-<h3 id="4-3-viewport">4.3 viewport</h3>
+<h2 id="viewport">viewport</h2>
 <p>[建议] 若页面欲对移动设备友好，需指定页面的 <code>viewport</code>。</p>
 <p>解释：</p>
 <p>viewport meta tag 可以设置可视区域的宽度和初始缩放大小，避免在移动设备上出现页面展示不正常。</p>
 <p>比如，在页面宽度小于 <code>980px</code> 时，若需 iOS 设备友好，应当设置 viewport 的 <code>width</code> 值来适应你的页面宽度。同时因为不同移动设备分辨率不同，在设置时，应当使用 <code>device-width</code> 和 <code>device-height</code> 变量。</p>
 <p>另外，为了使 viewport 正常工作，在页面内容样式布局设计上也要做相应调整，如避免绝对定位等。关于 viewport 的更多介绍，可以参见 <a href="https://developer.apple.com/library/mac/documentation/AppleApplications/Reference/SafariWebContent/UsingtheViewport/UsingtheViewport.html#//apple_ref/doc/uid/TP40006509-SW26">Safari Web Content Guide的介绍</a></p>
-<h2 id="5-">5 图片</h2>
+<h1 id="-">图片</h1>
 <p>[强制] 禁止 <code>img</code> 的 <code>src</code> 取值为空。延迟加载的图片也要增加默认的 <code>src</code>。</p>
 <p>解释：</p>
 <p><code>src</code> 取值为空，会导致部分浏览器重新加载一次当前页面，参考：<a href="https://developer.yahoo.com/performance/rules.html#emptysrc">https://developer.yahoo.com/performance/rules.html#emptysrc</a></p>
@@ -345,8 +345,8 @@ alert(document.getElementById(&#39;foo&#39;).tagName);
 <li>产品 logo、用户头像、用户产生的图片等有潜在下载需求的图片，以 <code>img</code> 形式实现，能方便用户下载。</li>
 <li>无下载需求的图片，比如：icon、背景、代码使用的图片等，尽可能采用 CSS 背景图实现。</li>
 </ol>
-<h2 id="6-">6 表单</h2>
-<h3 id="6-1-">6.1 控件标题</h3>
+<h1 id="-">表单</h1>
+<h2 id="-">控件标题</h2>
 <p>[强制] 有文本标题的控件必须使用 <code>label</code> 标签将其与其标题相关联。</p>
 <p>解释：</p>
 <p>有两种方式：</p>
@@ -360,7 +360,7 @@ alert(document.getElementById(&#39;foo&#39;).tagName);
 
 &lt;label for=&quot;username&quot;&gt;用户名：&lt;/label&gt; &lt;input type=&quot;textbox&quot; name=&quot;username&quot; id=&quot;username&quot;&gt;
 </code></pre>
-<h3 id="6-2-">6.2 按钮</h3>
+<h2 id="-">按钮</h2>
 <p>[强制] 使用 <code>button</code> 元素时必须指明 <code>type</code> 属性值。</p>
 <p>解释：</p>
 <p><code>button</code> 元素的默认 <code>type</code> 为 <code>submit</code>，如果被置于 <code>form</code> 元素中，点击后将导致表单提交。为显示区分其作用方便理解，必须给出 <code>type</code> 属性。</p>
@@ -371,7 +371,7 @@ alert(document.getElementById(&#39;foo&#39;).tagName);
 <p>[建议] 尽量不要使用按钮类元素的 <code>name</code> 属性。</p>
 <p>解释：</p>
 <p>由于浏览器兼容性问题，使用按钮的 <code>name</code> 属性会带来许多难以发现的问题。具体情况可参考<a href="http://w3help.org/zh-cn/causes/CM2001">此文</a>。</p>
-<h3 id="6-3-a11y-">6.3 可访问性 (A11Y)</h3>
+<h2 id="-a11y-">可访问性 (A11Y)</h2>
 <p>[建议] 负责主要功能的按钮在 DOM 中的顺序应靠前。</p>
 <p>解释：</p>
 <p>负责主要功能的按钮应相对靠前，以提高可访问性。如果在 CSS 中指定了 <code>float: right</code> 则可能导致视觉上主按钮在前，而 DOM 中主按钮靠后的情况。</p>
@@ -417,7 +417,7 @@ alert(document.getElementById(&#39;foo&#39;).tagName);
 <p>示例：</p>
 <pre><code class="lang-html">&lt;input type=&quot;date&quot;&gt;
 </code></pre>
-<h2 id="7-">7 多媒体</h2>
+<h1 id="-">多媒体</h1>
 <p>[建议] 当在现代浏览器中使用 <code>audio</code> 以及 <code>video</code> 标签来播放音频、视频时，应当注意格式。</p>
 <p>解释：</p>
 <p>音频应尽可能覆盖到如下格式：</p>
@@ -456,7 +456,7 @@ alert(document.getElementById(&#39;foo&#39;).tagName);
 <p>示例：</p>
 <pre><code class="lang-html">&lt;object width=&quot;100&quot; height=&quot;50&quot; data=&quot;something.swf&quot;&gt;DO NOT SUPPORT THIS TAG&lt;/object&gt;
 </code></pre>
-<h2 id="8-html">8 模板中的 HTML</h2>
+<h1 id="-html">模板中的 HTML</h1>
 <p>[建议] 模板代码的缩进优先保证 HTML 代码的缩进规则。</p>
 <p>示例：</p>
 <pre><code class="lang-html">&lt;!-- good --&gt;
