--- a/preview/javascript-style-guide.html
+++ b/preview/javascript-style-guide.html
@@ -1,7 +1,7 @@
 <html>
   <head>
 	  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>iscs_frontEnd:javascript-style-guide</title>
+    <title>i5ting_ztree_toc:javascript-style-guide</title>
 		<link href="toc/style/github-bf51422f4bb36427d391e4b75a1daa083c2d840e.css" media="all" rel="stylesheet" type="text/css"/>
 		<link href="toc/style/github2-d731afd4f624c99a4b19ad69f3083cd6d02b81d5.css" media="all" rel="stylesheet" type="text/css"/>
 		<link href="toc/css/zTreeStyle/zTreeStyle.css" media="all" rel="stylesheet" type="text/css"/>
@@ -1128,7 +1128,7 @@ Bar.prototype.baz = function () {
 </code></pre>
 <h3 id="-">细节注释</h3>
 <p>对于内部实现、不容易理解的逻辑说明、摘要信息等，我们可能需要编写细节注释。</p>
-<h2 id="-">[建议] 细节注释遵循单行注释的格式。说明必须换行时，每行是一个单行注释的起始。</h2>
+<p> [建议] 细节注释遵循单行注释的格式。说明必须换行时，每行是一个单行注释的起始。</p>
 <p>示例：</p>
 <pre><code class="lang-javascript">function foo(p1, p2, opt_p3) {
     // 这里对具体内部逻辑进行说明
