--- a/preview/printTemplate.html
+++ b/preview/printTemplate.html
@@ -2,20 +2,27 @@
 
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 	<title>iscs_FrontEnd:printTemplate</title>
 	<link href="toc/style/github-bf51422f4bb36427d391e4b75a1daa083c2d840e.css" media="all" rel="stylesheet" type="text/css" />
 	<link href="toc/style/github2-d731afd4f624c99a4b19ad69f3083cd6d02b81d5.css" media="all" rel="stylesheet" type="text/css" />
-	<link href="toc/css/zTreeStyle/zTreeStyle.css" media="all" rel="stylesheet" type="text/css" />
+	<!--<link href="toc/css/zTreeStyle/zTreeStyle.css" media="all" rel="stylesheet" type="text/css" />-->
+	<link href="toc/css/metroStyle/metroStyle.css" media="all" rel="stylesheet" type="text/css" />
 	<link href="toc/css/themes/github.css" media="all" rel="stylesheet" type="text/css" />
 	<style>
 		table {
 			border: 1px solid #ccc;
 			border-left: 0;
 			width: 100%;
+			font-size: 14px;
 		}
-		tbody, thead ,tr {
+		
+		tbody,
+		thead,
+		tr {
 			width: 100%;
 		}
+		
 		tr th {
 			border: 1px solid #ccc;
 			border-right: 0;
@@ -23,6 +30,7 @@
 			color: #fff;
 			height: 40px;
 			padding: 5px 10px;
+			font-size: 14px;
 		}
 		
 		tr td {
@@ -38,6 +46,19 @@
 		
 		table tr:hover td {
 			background: #ccc;
+		}
+		
+		.markdown-body h1 {
+			font-size: 20px;
+			color: #FF6537;
+		}
+		
+		.markdown-body h2 {
+			font-size: 18px;
+		}
+		
+		.markdown-body h3 {
+			font-size: 16px;
 		}
 	</style>
 
