--- a/preview/index.html
+++ b/preview/index.html
@@ -27,7 +27,7 @@
     <div class="jumbotron masthead" id="ToTop">
         <div class="container">
             <h1>ISCS API说明文档</h1>
-            <p> <a class="btn btn-success btn-large" href="index.html">查看文档</a> 
+            <p> <a class="btn btn-success btn-large" target="_blank" href="main.html">查看文档</a> 
             <a class="btn btn-primary btn-large" href="http://wwww.iscs.com.cn/" target="_blank">访问网仓官网</a> 
             </p>
             <div>&nbsp;</div>
