--- a/preview/index.html
+++ b/preview/index.html
@@ -15,7 +15,7 @@
                 <div class="nav-collapse">
                     <ul class="nav">
                         <li class=""><a href="index.html">首页</a> </li>
-                        <li class=""><a href="main.html" target="_blank">文档中心</a> </li>
+                        <li class=""><a href="main.html" >文档中心</a> </li>
                         <li class=""><a href="api.html">api数据类型</a> </li>
                         <li class=""><a href="records.html">变更记录</a> </li>
                     </ul>
@@ -27,7 +27,7 @@
     <div class="jumbotron masthead" id="ToTop">
         <div class="container">
             <h1>ISCS API说明文档</h1>
-            <p> <a class="btn btn-success btn-large" target="_blank" href="main.html">查看文档</a> 
+            <p> <a class="btn btn-success btn-large" href="main.html">查看文档</a> 
             <a class="btn btn-primary btn-large" href="http://wwww.iscs.com.cn/" target="_blank">访问网仓官网</a> 
             </p>
             <div>&nbsp;</div>
