--- a/preview/printTemplate.html
+++ b/preview/printTemplate.html
@@ -2,13 +2,15 @@
 
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 	<title>iscs_FrontEnd:printTemplate</title>
 	<link href="toc/style/github-bf51422f4bb36427d391e4b75a1daa083c2d840e.css" media="all" rel="stylesheet" type="text/css" />
 	<link href="toc/style/github2-d731afd4f624c99a4b19ad69f3083cd6d02b81d5.css" media="all" rel="stylesheet" type="text/css" />
 	<!--<link href="toc/css/zTreeStyle/zTreeStyle.css" media="all" rel="stylesheet" type="text/css" />-->
 	<link href="toc/css/metroStyle/metroStyle.css" media="all" rel="stylesheet" type="text/css" />
-	<link href="toc/css/themes/github.css" media="all" rel="stylesheet" type="text/css" />
+	<link href="toc/css/themes/github-v2.min.css" media="all" rel="stylesheet" type="text/css" />
+	<link type="text/css" rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
+	<link type="text/css" rel="stylesheet" href="indexcss/docs.css">
 	<style>
 		table {
 			border: 1px solid #ccc;
@@ -60,18 +62,40 @@
 		.markdown-body h3 {
 			font-size: 16px;
 		}
+		
+		#header {
+			width: 100%;
+			height: 25px;
+			background-color: #FF6537;
+			position: fixed;
+			top: 0;
+		}
 	</style>
 
 </head>
 
 <body>
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<div class="nav-collapse">
+					<ul class="nav">
+						<li><a href="index.html">首页</a> </li>
+						<li><a href="main.html">文档中心</a> </li>
+						<!--<li><a href="api.html">api数据类型</a> </li>
+						<li><a href="records.html">变更记录</a> </li>-->
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div>
 		<div style='width:25%;'>
-			<ul id="tree" class="ztree" style='width:100%'>
+			<ul id="tree" class="ztree" style='width:100%;margin-top:50px;'>
 
 			</ul>
 		</div>
-		<div id='readme' style='width:70%;margin-left:20%;'>
+		<div id='readme' style='width:70%;margin-left:20%;margin-top:50px;'>
 			<article class='markdown-body'>
 				<p><strong><em>打印模板</em></strong></p>
 <p>修改日志</p>
