--- a/preview/index.html
+++ b/preview/index.html
@@ -16,8 +16,8 @@
                     <ul class="nav">
                         <li class=""><a href="index.html">首页</a> </li>
                         <li class=""><a href="main.html" >文档中心</a> </li>
-                        <li class=""><a href="api.html">api数据类型</a> </li>
-                        <li class=""><a href="records.html">变更记录</a> </li>
+                        <!--<li class=""><a href="api.html">api数据类型</a> </li>
+                        <li class=""><a href="records.html">变更记录</a> </li>-->
                     </ul>
                 </div>
             </div>
