--- a/preview/frontEndTool.html
+++ b/preview/frontEndTool.html
@@ -540,11 +540,9 @@
 </ol>
 <hr>
 <p>以下是 <a href="http://weibo.com/jayli">@拔赤</a> 总结的前端技能图：
-<img src="https://raw.githubusercontent.com/nieweidong/fetool/master/img/fe.jpg" alt="拔赤总结的前端技能图"></p>
+<img src="img/fe.jpg" alt="拔赤总结的前端技能图"></p>
 <hr>
 <p>完善 ing，慢慢把 <strong>Evernote</strong> 和 <strong>浏览器书签</strong> 里面的好东西慢慢捣腾到这儿，更欢迎 PR，谢谢。</p>
-<p><img src="https://raw.githubusercontent.com/nieweidong/fetool/master/img/me.jpg" width="120" height="120" style="border-radius: 60px;" /></p>
-<h4 id="-">用自己青涩时的照片镇楼，哇哈哈~</h4>
 
 			</article>
 		</div>
