--- a/preview/css.html
+++ b/preview/css.html
@@ -75,27 +75,14 @@
 </head>
 
 <body>
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container">
-				<div class="nav-collapse">
-					<ul class="nav">
-						<li><a href="index.html">首页</a> </li>
-						<li><a href="main.html">文档中心</a> </li>
-						<!--<li><a href="api.html">api数据类型</a> </li>
-						<li><a href="records.html">变更记录</a> </li>-->
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 	<div>
 		<div style='width:25%;'>
-			<ul id="tree" class="ztree" style='width:100%;margin-top:50px;'>
+			<ul id="tree" class="ztree" style='width:100%;'>
 
 			</ul>
 		</div>
-		<div id='readme' style='width:70%;margin-left:20%;margin-top:50px;'>
+		<div id='readme' style='width:70%;margin-left:20%;'>
 			<article class='markdown-body'>
 				<h3 id="-">以下是常用的代码收集，没有任何技术含量，只是填坑的积累。转载请注明出处，谢谢。</h3>
 <h4 id="1-css-2-x">1. css 2.x</h4>
