--- a/preview/useGulp.html
+++ b/preview/useGulp.html
@@ -75,27 +75,14 @@
 </head>
 
 <body>
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container">
-				<div class="nav-collapse">
-					<ul class="nav">
-						<li><a href="index.html">首页</a> </li>
-						<li><a href="main.html">文档中心</a> </li>
-						<!--<li><a href="api.html">api数据类型</a> </li>
-						<li><a href="records.html">变更记录</a> </li>-->
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 	<div>
 		<div style='width:25%;'>
-			<ul id="tree" class="ztree" style='width:100%;margin-top:50px;'>
+			<ul id="tree" class="ztree" style='width:100%;'>
 
 			</ul>
 		</div>
-		<div id='readme' style='width:70%;margin-left:20%;margin-top:50px;'>
+		<div id='readme' style='width:70%;margin-left:20%;'>
 			<article class='markdown-body'>
 				<h1 id="use-gulp">use-gulp</h1>
 <blockquote>
