使用模板引擎ejs

--- a/code/node-http/assets/blog.html
+++ b/code/node-http/assets/blog.html
@@ -25,7 +25,7 @@
       <nav class="navbar navbar-inverse navbar-fixed-top " role="navigation">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">主页</a>
+            <a class="navbar-brand" href="/">主页面</a>
           </div>
           <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
@@ -44,9 +44,8 @@
       </nav>
     </div>
   </div>
-  <h1 style="margin-top:100px;">这是主页面</h1>
-  <h1 style="margin-top:100px;"><%=name%></h1>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <div style="margin-top:100px;">这是博客页面</div>
+  <h1 style="margin-top:100px;"><%=city%></h1>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
